objects/CCR__c.object
<CustomObject>
    <description>Cadence Change Request Object.</description>
    <fields>
        <fullName>Action_Release__c</fullName>
        <label>Action Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_ID__c</fullName>
        <label>Build ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCListAll__c</fullName>
        <label>CCListAll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Account_Name__c</fullName>
        <label>AccountName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Contact_Site__c</fullName>
        <label>Contact Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Crash__c</fullName>
        <label>Crash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Create_Date__c</fullName>
        <label>Create Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_DBID__c</fullName>
        <label>DBID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Family_Name__c</fullName>
        <description>Text field for CCMS Family Name</description>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>CCMS_Family__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_Family__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_Id__c</fullName>
        <label>CCMS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Need_Releases_Name__c</fullName>
        <label>CCMS Need Releases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Need_Releases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Need Releases</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.CCMS_Family__c</field>
                <operation>equals</operation>
                <valueField>CCMS_Need_Releases__c.CCMS_Family__c</valueField>
            </filterItems>
            <filterItems>
                <field>CCMS_Need_Releases__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_Need_Releases__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_OS_Name__c</fullName>
        <label>CCMS OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_OS_Versions_Name__c</fullName>
        <label>CCMS OS Versions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_OS_Versions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS OS Versions</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>CCMS_OS_Versions__c.CCMS_OS__c</field>
                <operation>equals</operation>
                <valueField>$Source.CCMS_OS__c</valueField>
            </filterItems>
            <filterItems>
                <field>CCMS_OS_Versions__c.Name</field>
                <operation>notContain</operation>
                <value>Unknown</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_OS_Versions__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_OS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS OS</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>CCMS_OS__c.Name</field>
                <operation>notContain</operation>
                <value>Unknown, UNKNOWN</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_OS__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_ProdLevel2_Name__c</fullName>
        <label>ProdLevel2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_ProdLevel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS ProdLevel2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CCMS_ProdLevel2__c.CCMS_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.CCMS_Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_ProdLevel2__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_Product_Name__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>CCMS_Product__c.CCMS_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.CCMS_Family__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_Product__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_Requestor_Name__c</fullName>
        <label>Requestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Version_Name__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Version</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>CCMS_Version__c.CCMS_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.CCMS_Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMS_Version__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS__c</fullName>
        <formula>IF(
 CCMS_Id__c = NULL,
&quot;Link not available&quot;,
 HYPERLINK(&quot;http://ccms.cadence.com/cqweb/#/Production/CCMPR/RECORD/&quot; &amp;  CCMS_Id__c , &quot;Edit&quot; ,&quot;_blank&quot;)
)</formula>
        <label>CCMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRPrint__c</fullName>
        <formula>HYPERLINK($Label.CCMS_CCRPRINT_URL+Trunc_CCR_ID__c, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCR Print</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_Notes__c</fullName>
        <label>CCR_Notes (Limited to 32K chars)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCR_Number__c</fullName>
        <displayFormat>CCR-{000000}</displayFormat>
        <label>CCR Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CDSinfo__c</fullName>
        <formula>HYPERLINK(&quot;http://cdsinfo.cadence.com/?&quot; &amp;Name, &quot;Open&quot;)</formula>
        <label>CDSinfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_OS_Name__c</fullName>
        <label>COS OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Engineer__c</fullName>
        <description>This field will be used to hold the Text Value of the Case Owner associated to the CCR. This field was a lookup field previously to the contact object, but needed to take into account owners who may be a queue, so changed to a Text field.</description>
        <inlineHelpText>This field will be updated by the system after Save.</inlineHelpText>
        <label>CS Engineer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Is_Data_Steward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Site</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Account.ParentId</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>$User.Is_Data_Steward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CCR (Contact Site)</relationshipLabel>
        <relationshipName>CCR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Date_Do_Not_Use__c</fullName>
        <description>Delete after TESTING</description>
        <label>Create Date - Do Not Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Project__c</fullName>
        <label>Cust Project</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Edit_CCR__c</fullName>
        <formula>HYPERLINK( $Label.CCMS_Base_Url_for_Edit +  LPAD(Trunc_CCR_ID__c, 8, &apos;0&apos;) , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit CCR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <description>Indicates the nature of the customer engagement that caused the CCR to be created.  This field cannot be changed to M after initial submission.</description>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>B - Beta-Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P - Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Maintenance</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_HotFix_Date__c</fullName>
        <label>Engineering HotFix Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>COS unique reference after CCR is created.  Either it is CCR Name or Row_Id depended on if it is historical data.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IT_Ticket__c</fullName>
        <label>IT Ticket</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <description>This field will tell the status of the record with CCMS.</description>
        <formula>IF( 
ISBLANK(Trunc_CCR_ID__c), 
IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;Unlocked&quot;) &amp; &quot; Unlocked&quot;, 
IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;Locked&quot;) &amp; &quot; Locked: Resubmit and Case can only be edited&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show the status of integration with CCMS. If the record has been received from CCMS, it will be locked and only Resubmit and Case will be editable.</inlineHelpText>
        <label>Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_DO_NOT_USE__c</fullName>
        <description>TESTING ONLY</description>
        <label>Last Modified Date - DO NOT USE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <label>Marketing Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_PCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master CCR</label>
        <referenceTo>CCR__c</referenceTo>
        <relationshipLabel>CCR</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <label>Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>More_Info_Date__c</fullName>
        <label>More Info Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_By_Release__c</fullName>
        <label>Need By Release</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_By__c</fullName>
        <label>Need By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_CDS_Severity_Date__c</fullName>
        <label>Original CDS Severity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Family_Name__c</fullName>
        <label>Original Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product_Level2_Name__c</fullName>
        <label>Original Product Level2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product_Name__c</fullName>
        <label>Original Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Submit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Original Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCR_Number__c</fullName>
        <label>PCR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CCR (Parent Account)</relationshipLabel>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>Plan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <label>Planned Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&quot;http://cdsinfo.cadence.com/?&quot; &amp;Name, &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>CCR priority fields.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Must</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Should</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Could</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Release__c</fullName>
        <label>Proposed Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_D_Priority__c</fullName>
        <label>R&amp;D Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regression__c</fullName>
        <label>Regression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RepSeverity__c</fullName>
        <label>Rep Severity</label>
        <picklist>
            <picklistValues>
                <fullName>0 - No Workaround</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Minor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Request_Type__c</fullName>
        <label>Rep Req Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Urgency__c</fullName>
        <label>Rep Urgency</label>
        <picklist>
            <controllingField>RepSeverity__c</controllingField>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Storage_Type__c</fullName>
        <label>Secure Storage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Chamber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Directory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Label__c</fullName>
        <label>Security Label</label>
        <picklist>
            <controllingField>Secure_Storage_Type__c</controllingField>
            <picklistValues>
                <fullName>Confidential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential-delete date required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential-authorized group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential-authorized user</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Picklist of CCR states.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Unactionable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MoreInfo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreproducible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Characterized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked_In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trunc_CCR_ID__c</fullName>
        <description>CCMS unique reference after CCR is created</description>
        <externalId>true</externalId>
        <label>Trunc CCR ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unlink__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Unlink_CCR_VP?CaseId=&quot;+Case__c+&quot;&amp;ccrId=&quot;+Id,&quot;Unlink&quot;,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdsPriority_Date__c</fullName>
        <label>cdsPriority Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>CCR</label>
    <listViews>
        <fullName>All_CCR</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Case__c</columns>
        <columns>CCMS_Product_Name__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All CCRs</label>
        <language>en_US</language>
    </listViews>
</CustomObject>